[gd_scene load_steps=7 format=3 uid="uid://d3o0iajk1xkx3"]

[ext_resource type="Script" path="res://adjektive_endungen/adjektive_endungen_ui.gd" id="1_khgyv"]
[ext_resource type="Script" path="res://adjektive_endungen/font_settings.gd" id="2_87o64"]

[sub_resource type="GDScript" id="GDScript_es42h"]
script/source = "extends LineEdit

func _gui_input(event):
	if event is InputEventKey:
		if event.keycode == KEY_ENTER and event.pressed:
			get_parent().set_new_font_size(int(text))
"

[sub_resource type="GDScript" id="GDScript_nh2q8"]
script/source = "extends TextEdit

@onready var ui = get_parent().get_parent().get_parent()

func _gui_input(event):
	if event is InputEventKey:
		if event.keycode == KEY_ENTER and event.pressed:
			ui._on_create_text_pressed()
		if event.keycode == KEY_ENTER and event.is_released():
			clear()
"

[sub_resource type="GDScript" id="GDScript_ai71i"]
script/source = "extends TextEdit

@onready var ui = get_parent().get_parent().get_parent()

func _gui_input(event):
	if event is InputEventKey:
		if event.keycode == KEY_ENTER and event.pressed:
			ui._on_create_adjective_pressed()
		if event.keycode == KEY_ENTER and event.is_released():
			clear()
"

[sub_resource type="GDScript" id="GDScript_7u8lg"]
script/source = "extends TextEdit

@onready var ui = get_parent().get_parent().get_parent()

func _gui_input(event):
	if event is InputEventKey:
		if event.keycode == KEY_ENTER and event.pressed:
			ui._on_create_draggable_pressed()
		if event.keycode == KEY_ENTER and event.is_released():
			clear()
"

[node name="adjektive_endungen_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_khgyv")

[node name="left_ui" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 512.0
offset_bottom = 1080.0
mouse_filter = 0

[node name="font_settings_caption" type="Label" parent="left_ui"]
layout_mode = 2
text = "Font Settings:"

[node name="font_settings" type="HBoxContainer" parent="left_ui"]
layout_mode = 2
script = ExtResource("2_87o64")

[node name="increase" type="Button" parent="left_ui/font_settings"]
layout_mode = 2
text = "+"

[node name="decrease" type="Button" parent="left_ui/font_settings"]
layout_mode = 2
text = "-"

[node name="LineEdit" type="LineEdit" parent="left_ui/font_settings"]
layout_mode = 2
script = SubResource("GDScript_es42h")

[node name="add_text_caption" type="Label" parent="left_ui"]
layout_mode = 2
text = "Add normal text"

[node name="add_text" type="HBoxContainer" parent="left_ui"]
layout_mode = 2
mouse_filter = 0

[node name="text" type="TextEdit" parent="left_ui/add_text"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Normale Textkarte"
script = SubResource("GDScript_nh2q8")

[node name="create_text" type="Button" parent="left_ui/add_text"]
layout_mode = 2
text = "Fertig"

[node name="add_adjective_caption" type="Label" parent="left_ui"]
layout_mode = 2
text = "Add adjective with empty suffix:"

[node name="add_adjective" type="HBoxContainer" parent="left_ui"]
layout_mode = 2
mouse_filter = 0

[node name="text" type="TextEdit" parent="left_ui/add_adjective"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Adjektive (Box mit erg√§nzbarer Endung)"
script = SubResource("GDScript_ai71i")

[node name="create adjective" type="Button" parent="left_ui/add_adjective"]
layout_mode = 2
text = "Fertig"

[node name="Label" type="Label" parent="left_ui"]
layout_mode = 2
text = "Add Draggable:"

[node name="add_draggable" type="HBoxContainer" parent="left_ui"]
layout_mode = 2
mouse_filter = 2

[node name="text" type="TextEdit" parent="left_ui/add_draggable"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Endungen"
script = SubResource("GDScript_7u8lg")

[node name="create_draggable" type="Button" parent="left_ui/add_draggable"]
layout_mode = 2
text = "Fertig"

[node name="show_draggables" type="Button" parent="left_ui"]
layout_mode = 2
text = "Show Draggables"

[node name="clear_board" type="Button" parent="left_ui"]
layout_mode = 2
text = "Clear Board"

[connection signal="pressed" from="left_ui/font_settings/increase" to="left_ui/font_settings" method="_on_increase_pressed"]
[connection signal="pressed" from="left_ui/font_settings/decrease" to="left_ui/font_settings" method="_on_decrease_pressed"]
[connection signal="pressed" from="left_ui/add_text/create_text" to="." method="_on_create_text_pressed"]
[connection signal="pressed" from="left_ui/add_adjective/create adjective" to="." method="_on_create_adjective_pressed"]
[connection signal="pressed" from="left_ui/add_draggable/create_draggable" to="." method="_on_create_draggable_pressed"]
[connection signal="pressed" from="left_ui/show_draggables" to="." method="_on_show_draggables_pressed"]
[connection signal="pressed" from="left_ui/clear_board" to="." method="_on_clear_board_pressed"]
